--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@quasar/extras": "^1.17.0",
     "axios": "^1.2.1",
     "core-js": "^3.31.1",
+    "moment": "^2.30.1",
     "pinia": "^3.0.1",
     "quasar": "^2.18.5",
     "vue": "^3.4.18",
