--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.17.0",
+    "@tinymce/tinymce-vue": "^6.3.0",
     "axios": "^1.2.1",
     "core-js": "^3.31.1",
     "moment": "^2.30.1",
     "pinia": "^3.0.1",
     "quasar": "^2.18.5",
+    "tinymce": "^8.1.2",
+    "tinymce-i18n": "^25.10.6",
+    "v-money3": "^3.24.1",
     "vue": "^3.4.18",
     "vue-i18n": "^11.0.0",
     "vue-router": "^4.0.12"
