--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "quasar-inicial",
   "version": "0.0.1",
-  "description": "A Quasar Project",
-  "productName": "Quasar App",
+  "description": "Sistema OSLO - Plataforma completa para gestão cartorária",
+  "productName": "Sistema OSLO - Plataforma completa para gestão cartorária",
   "author": "Alexandre Teixeira Mendes <alex.fnvip@gmail.com>",
   "private": true,
   "type": "module",
