--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   },
   "devDependencies": {
     "@quasar/app-webpack": "^4.3.1",
-    "autoprefixer": "^10.4.2"
+    "autoprefixer": "^10.4.2",
+    "dotenv": "^17.2.3"
   },
   "browserslist": [
     "last 10 Chrome versions",
