--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-API_URL=http://localhost:8000/api
-APP_NAME=OSLO
+API_URL=https://homologacao-api.sistemaoslo.com.br/api/
+APP_NAME="OSLO Homologação"
